tests/e2e/semantics/object_index_complex_invalid.error
Error: syntax error in story at line 2, column 1

2|    a.k[1] = "b"
      ^^^^^

E0131: `Map[string,List[boolean]]` can't be dot-accessed with `k` of type `string`
